<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:background="@drawable/about"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:textAlignment="center"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/line"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_name_about"
            android:textSize="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="9dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name_cn"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_version"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_author"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_school_number"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_website"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#f5f5f5"
            android:text="@string/btn_ok"
            android:textSize="20sp"  />
    </LinearLayout>
</LinearLayout>