<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- 用户操作区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/selected_city"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/item_name_no_option"
            android:textSize="33sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/place" />
        <RelativeLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/img_btn_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:src="@drawable/refresh" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 空气质量信息部分-->
    <LinearLayout
        android:id="@+id/main_content"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/value_air_quality_number"
                android:text="200"
                android:textSize="75sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="19sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_name_air_quality"
                            />
                        <TextView
                            android:id="@+id/value_air_quality"
                            android:textSize="19sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="19sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_name_air_primary_pollution"
                            />
                        <TextView
                            android:id="@+id/value_main_pollution"
                            android:textSize="19sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom|end"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textSize="19sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_name_air_point_time"
                                />
                            <TextView
                                android:id="@+id/value_time"
                                android:textSize="19sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/station_pollution_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>